[egg_info]
tag_build = 
tag_date = 0

[metadata]
name = pythia
version = 0.9.0
author = Michael A.G. Aivazis
maintainer = Brad Aagaard
maintainer_email = baagaard@usgs.gov
description = An extensible, object-oriented framework for specifying and staging complex, multi-physics simulations.
license = BSD
url = http://www.geodynamics.org/cig/software/pythia

[options]
python_requires = >=3.6

packages = find:
scripts =
	bin/idd.py
	bin/ipad.py
	bin/journald.py
	pyre/schedulers/scripts/lsf/batch.sh.odb
	pyre/schedulers/scripts/pbs/batch.sh.odb
	pyre/schedulers/scripts/sge/batch.sh.odb
	pyre/schedulers/scripts/tacc-ranger/batch.sh.odb	

include_package_data = True
zip_safe = False

[options.package_data]
* = *.odb, *.h, _*.c, *.pyx, *.pxd
