

nobase_pkginclude_HEADERS = \
	journal/Diagnostic.h \
	journal/NullDiagnostic.h \
	journal/SeverityDebug.h \
	journal/SeverityError.h \
	journal/SeverityFirewall.h \
	journal/SeverityInfo.h \
	journal/SeverityWarning.h \
	journal/debug.h \
	journal/debuginfo.h \
	journal/diagnostics.h \
	journal/error.h \
	journal/firewall.h \
	journal/info.h \
	journal/macros.h \
	journal/manipulators.h \
	journal/warning.h


# End of file 
